added options to check backends types and other improvements for geogig image